--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Cocktails#index</h1>
-<p>Find me in app/views/cocktails/index.html.erb</p>
+<h1>All The Cocktails</h1>
 
-<h2><%= link_to "Make a Cocktail", new_cocktail_path %></h2>
+
+<h3><%= link_to "Make a Cocktail", new_cocktail_path %></h3>
 
 <% @cocktails.each do |cocktail| %>
   <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
