--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,10 +1,22 @@
 <h1><%= @cocktail.name %></h1>
-
-<%= link_to "new dose", new_cocktail_dose_path(@cocktail), id: "new-dose" %>
-
-<% @doses.each do |dose| %>
-  <h3><%= dose.ingredient.name %> <%= dose.description %></h3>
-  <p><%= link_to "delete", cocktail_dose_path(dose), method: :delete %></p>
-<% end %>
-
+<div>
+  <button id="new-dose">New Dose</button>
+  <div id="dose-form" class="hidden">
+    <%= simple_form_for [@cocktail, @dose] do |f| %>
+      <%= f.input :ingredient_id, collection: Ingredient.all %>
+      <%= f.input :description %>
+      <%= f.button :submit %>
+    <% end %>
+  </div>
+</div>
+<div>
+  <% @doses.each do |dose| %>
+    <div>
+      <h3><%= dose.ingredient.name %> <%= dose.description %></h3>
+      <p><%= link_to "delete", cocktail_dose_path(dose), method: :delete %></p>
+    </div>
+  <% end %>
+</div>
+<button class="btn btn-alarm">
 <%= link_to "Go Back", cocktails_path %>
+</button>
