--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -9,7 +9,7 @@
   <div class="row">
     <% @cocktails.each do |cocktail| %>
       <div class="col-xs-12 col-sm-4">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('background.jpg');">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%=  cl_image_path cocktail.photo, width: 400, height: 300, crop: :fill  %>');">
           <div class="card-category">Cocktail</div>
           <div class="card-description">
             <h2><%= link_to cocktail.name, cocktail_path(cocktail) %></h2>
@@ -17,8 +17,6 @@
               <p><%= dose.ingredient.name %> <%= dose.description %></p>
             <% end %>
           </div>
-          <img class="card-user avatar" src="user.jpg">
-          <a class="card-link" href="#" ></a>
         </div>
       </div>
     <% end %>
@@ -26,5 +24,3 @@
 </div>
 
 
-
-<h3></h3>
