--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -3,9 +3,13 @@
 </div>
 <div>
   <%= simple_form_for @cocktail do |f| %>
-    <%= f.input :name %>
-    <%= f.input :photo %>
+    <%= f.input :name, label: 'Name (mandatory)' %>
+    <%= f.input :photo, label: 'Photo (mandatory)' %>
     <%= f.input :photo_cache, as: :hidden %>
     <%= f.button :submit %>
   <% end %>
 </div>
+
+<button class="btn btn-alarm" style="margin: 2px;">
+<%= link_to "Go Back", cocktails_path %>
+</button>
