--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -22,7 +22,7 @@
     </div>
   <% end %>
 </div>
-<button class="btn btn-alarm">
+<button class="btn btn-alarm" style="margin: 2px;">
 <%= link_to "Go Back", cocktails_path %>
 </button>
 
